unpackaged/main/default/objects/Application_Log__c/Application_Log__c.object-meta.xml
<CustomObject>
    <description>Exposes logs to users through the Application Logger package</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>AL-{0000}</displayFormat>
        <label>Application Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>