unpackaged/main/default/objects/Application_Log__c/fields/Log_Type__c.field-meta.xml
<CustomField>
    <fullName>Log_Type__c</fullName>
    <description>Populated by getTypeName()</description>
    <inlineHelpText>Primarly the Apex Exception types though can be filled with Undefined, or implementation defined Text.</inlineHelpText>
    <label>Log Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Undefined</fullName>
                <default>true</default>
                <label>Undefined</label>
            </value>
            <value>
                <fullName>System.AsyncException</fullName>
            </value>
            <value>
                <fullName>System.BigObjectException</fullName>
            </value>
            <value>
                <fullName>System.CalloutException</fullName>
            </value>
            <value>
                <fullName>System.DmlException</fullName>
            </value>
            <value>
                <fullName>System.EmailException</fullName>
            </value>
            <value>
                <fullName>System.ExternalObjectException</fullName>
            </value>
            <value>
                <fullName>System.IllegalArgumentException</fullName>
            </value>
            <value>
                <fullName>System.InvalidParameterValueException</fullName>
            </value>
            <value>
                <fullName>System.LimitException</fullName>
            </value>
            <value>
                <fullName>System.JSONException</fullName>
            </value>
            <value>
                <fullName>System.ListException</fullName>
            </value>
            <value>
                <fullName>System.MathException</fullName>
            </value>
            <value>
                <fullName>System.NoAccessException</fullName>
            </value>
            <value>
                <fullName>System.NoDataFoundException</fullName>
            </value>
            <value>
                <fullName>System.NoSuchElementException</fullName>
            </value>
            <value>
                <fullName>System.NullPointerException</fullName>
            </value>
            <value>
                <fullName>System.QueryException</fullName>
            </value>
            <value>
                <fullName>System.RequiredFeatureMissing</fullName>
            </value>
            <value>
                <fullName>System.SearchException</fullName>
            </value>
            <value>
                <fullName>System.SecurityException</fullName>
            </value>
            <value>
                <fullName>System.SerializationException</fullName>
            </value>
            <value>
                <fullName>System.SObjectException</fullName>
            </value>
            <value>
                <fullName>System.StringException</fullName>
            </value>
            <value>
                <fullName>System.TypeException</fullName>
            </value>
            <value>
                <fullName>System.VisualforceException</fullName>
            </value>
            <value>
                <fullName>System.XmlException</fullName>
            </value>
            <value>
                <fullName>Daily Policy update failed</fullName>
            </value>
            <value>
                <fullName>Daily Policy delete failed</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>