unpackaged/main/default/objects/Application_Log__c/fields/Log_Type_Source__c.field-meta.xml
<CustomField>
    <fullName>Log_Type_Source__c</fullName>
    <description>When Log type is Custom, source adds context. Freetext to support non-strict scale.</description>
    <inlineHelpText>When Log type is Custom, source adds context. Freetext to support non-strict scale.</inlineHelpText>
    <label>Log Type Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>