unpackaged/main/default/objects/Application_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Populated by Application Logger.</description>
    <inlineHelpText>The Application Log message, including Apex Exception getMessage() and derivatives, or implementation defined texts.</inlineHelpText>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>