unpackaged/main/default/objects/Application_Log__c/fields/Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Record_Link__c</fullName>
    <formula>IF( NOT(ISBLANK( Record_Id__c )), 
 HYPERLINK(&quot;/&quot; &amp; Record_Id__c , &quot;/&quot; &amp; Record_Id__c , &quot;_self&quot;),
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Link</label>
    <type>Text</type>
</CustomField>